--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,6 @@ anchorjs: true                          # if you want to customize anchor. check
 plugins: [jekyll-paginate]
 
 
-
 # Markdown settings
 # replace redcarpet to kramdown,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
@@ -59,10 +58,10 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+#disqus_username: hux
 
 # Netease settings
-netease_comment: false
+#netease_comment: false
 
 
 
@@ -102,7 +101,7 @@ page-mathjax: false
 
 # Friends
 #friends: [
-    {
+   # {
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
@@ -111,7 +110,7 @@ page-mathjax: false
     # },{
     #    title: "前端外刊评论",
     #    href: "http://qianduan.guru/"
-    },{
+   # },{
     #    title: "天镶的博客",
     #    href: "http://lingyu.wang/"
     # }
